# UESynth

./: .clang-format  .clang-tidy  .gitignore  CONTRIBUTING.md  LICENSE  README.md  UESynth.uplugin  cppcheck-suppressions.txt  cppcheck.cfg
.github/actions/setup-ue/: action.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/robust-cpp-cicd/: design.md  requirements.md  tasks.md
GeneratedCode/Private/SGoogleProtobuf/: EmptyMarshaling.cpp  EmptyMarshaling.h  EmptyMessage.cpp
GeneratedCode/Private/SUesynth/: UesynthClient.cpp  UesynthContext.cpp  UesynthContext.h  UesynthMarshaling.cpp  UesynthMarshaling.h  UesynthMessage.cpp  UesynthNode.cpp  UesynthService.cpp  UesynthService_Private.cpp  UesynthService_Private.h
GeneratedCode/Private/pb/: uesynth.pb.cc
GeneratedCode/Public/SGoogleProtobuf/: EmptyMessage.h
GeneratedCode/Public/SUesynth/: UesynthClient.h  UesynthMessage.h  UesynthNode.h  UesynthService.h
Protos/: uesynth.proto
Source/UESynth/: UESynth.Build.cs
Source/UESynth/Private/: UESynth.cpp  UESynthServiceImpl.cpp  UESynthServiceImpl.h
Source/UESynth/Public/: UESynth.h
Source/UESynth/Tests/: AutomateTests.ps1  README.md  RunTests.bat  RunTests.ps1  UESynthTestBase.cpp  UESynthTestBase.h  UESynthTests.Build.cs  UESynthTests.cpp  ValidateIntegrationTests.ps1  ValidateTestInfrastructure.ps1
Source/UESynth/Tests/Integration/: GrpcServiceTest.cpp  GrpcServiceTest_Simple.cpp
Source/UESynth/Tests/Mocks/: MockGrpcContext.cpp  MockGrpcContext.h  MockUEWorld.cpp  MockUEWorld.h
Source/UESynth/Tests/Unit/: ImageCaptureTest.cpp  TransformUtilsTest.cpp  UESynthServiceImplTest.cpp
check/: README.md  all  cpp-build  cpp-cache  cpp-format  cpp-test  format  integration  lint  test  typecheck
client/: README.md  TESTING.md  check_server.py  debug_camera.py  pyproject.toml  setup.py  test_camera_creation.py  test_exact_health_check.py  test_integration.py  test_runner.py  test_server_health.py  test_specific_camera.py  test_streaming_capture.py  test_with_retry.py
client/client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
client/examples/: async_example.py  client_comparison.py  minimal_sync_example.py  sync_example.py
client/tests/: __init__.py  test_async_connection.py  test_client.py  test_connection.py
client/uesynth/: __init__.py  uesynth_pb2.py  uesynth_pb2_grpc.py
docs/: SUMMARY.md  contributing.md  page-1.md
docs/api-reference/: async-client.md  sync-client.md
docs/examples/: async-streaming.md  basic-examples.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: basic-usage.md
docs/performance/: optimization.md
examples/: streaming_example.py
